﻿shmuel 30.04.2014 20:57:47 +0200 - build 322

1. Мелкий рефакторинг.

shmuel 29.04.2014 17:51:59 +0200 - build 321

1. По просьбе трудящихся: команды "lm:post" и "macro:post" оставлены на полгода,
   в качестве синонимов команды "lua:".

shmuel 28.04.2014 19:42:31 +0200 - build 320

1. Не, "lm:" никому не мешала, пусть живёт как синоним "macro:".

shmuel 28.04.2014 18:18:11 +0200 - build 319

1. Команда "lm:" убрана, вместо неё - команда "macro:".

2. Из таблицы mf убраны функции: band,bor,bnot,bxor,lshift,rshift.

shmuel 28.04.2014 13:42:55 +0200 - build 318

1. Убраны команды "luacheck:" и "mooncheck:".

2. В функции eval добавлен опциональный 3-й параметр 'Lang'.

shmuel 27.04.2014 13:32:54 +0200 - build 317

1. Продолжение build 316 + обновлена документация.

shmuel 27.04.2014 01:33:41 +0200 - build 316

1. Новый синтаксис командной строки плагина:
       lm:        load
       lm:        save
       lm:        unload
       lua:       <sequence> | @<filename> [<params>]
       moon:      <sequence> | @<filename> [<params>]
       luacheck:  <sequence> | @<filename> [<params>]
       mooncheck: <sequence> | @<filename> [<params>]
   Документация ещё не обновлена.

shmuel 26.04.2014 17:56:39 +0200 - build 315

1. Продолжение 314, документация обновлена:
   -- команды lm:post2 и lm:check2 в плагине LuaMacro.

shmuel 25.04.2014 21:32:52 +0200 - build 314

1. Поддержка MoonScript в API плагинов (документация ещё не обновлена).

shmuel 23.04.2014 16:34:49 +0200 - build 313

1. moonscript.dll заменена на moonscript.lua.

shmuel 23.04.2014 10:28:06 +0200 - build 312

1. Откат build 311, в связи с вынесением LPeg из moonscript.dll в отдельную lpeg.dll.

shmuel 23.04.2014 08:12:28 +0200 - build 311

1. Fix build 310: при перезагрузке скриптов выгружался LPeg, без которого
   не может работать MoonScript.

shmuel 23.04.2014 01:08:10 +0200 - build 310

1. Добавлена поддержка MoonScript (автор идеи и первой реализации - Вадим Егоров).