@@ -1,4 +1,10 @@
-﻿shmuel 30.04.2014 20:57:47 +0200 - build 322
+﻿shmuel 01.05.2014 17:05:32 +0200 - build 323
+
+1. В файл moonscript.lua не была включена стандартная библиотека языка.
+
+2. Рефакторинг.
+
+shmuel 30.04.2014 20:57:47 +0200 - build 322
 
 1. Мелкий рефакторинг.
 
